--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ h1.p{
 color: #fff;
 }
 div{
+    justify-content: center;
     background-color: aqua;
-    width: 100%;
+    width: 100px;
     height: 100px;
 }
 
