--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ h1.p{
 color: #fff;
 }
 div{
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     background-color: aqua;
     width: 100px;
     height: 100px;
