--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .form {
   padding: 30px;
-  margin: 50px;
+  margin-top: 50px;
   border-radius: 5px;
   background-color: aliceblue;
 }
